Fix background image stretch
The background image is stretching (distoring) on wide screens. This is fixed by using background-size: cover. Works well on all screen sizes.

--- a/_sass/common.sass
+++ b/_sass/common.sass
@@ -14,7 +14,7 @@ body
     height: 100vh
     /* https://pixabay.com/en/landscape-forest-trees-jungle-2584127/ */
     background-image: url("/images/bg_100pc.jpg")
-    background-size: 100% 100%
+    background-size: cover
     background-attachment: fixed 
     margin: 0
     padding: 0
@@ -38,8 +38,6 @@ body
     min-height: 100%
 
 @media screen and (max-width: $small_screen_max_width)
-    body
-        background-size: auto 100%
     #post-container
         width: calc(100% - 40px)
 
